# showel

./: .editorconfig  .env.example  .gitignore  AGENTS.md  BUGFIX_v0.1.1.md  CELL_EDITING_v0.2.0.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  FINAL_FIXES_SUMMARY.md  FIXES_SUMMARY.md  LICENSE  OVERVIEW.md  PAGINATION_IMPLEMENTATION.md  PAGINATION_SUMMARY.md  PROJECT_INFO.md  QUICKSTART.md  README.md  SCROLL_FIX_v0.1.3.md  SECURITY.md  SORTING_v0.3.0.md  SUMMARY.md  TODO.md  TYPE_AWARE_EDITING_v0.2.1.md  UI_FIX_v0.1.2.md  UI_MOCKUP.md  USAGE.md  docker-compose.yml  run.sh  users.sqlite
.github/workflows/: apt-repo.yml  arch-repo.yml  aur-check.yml  aur-publish-bin.yml  aur-publish.yml  flatpak.yml  linux.yml  main.yml  repo-pages.yml  test.yml  windows-installer.yml
.kilo/plans/: 1776995406836-hidden-otter.md
acp/: Cargo.toml  build.rs
acp-agent/: Cargo.toml
acp-agent/src/: main.rs
acp-context/: Cargo.toml
acp-context/src/: context.rs  lib.rs  semantic_cache.rs
acp-core/: Cargo.toml
acp-core/src/: deepseek.rs  embedding.rs  lib.rs  ollama.rs  runtime.rs
acp-registry/: Cargo.toml
acp-registry/src/: lib.rs
acp/src/: agents.rs  context.rs  embedding.rs  introspection.rs  lib.rs  ollama.rs  runtime.rs  semantic_cache.rs
app/: Cargo.toml  build.rs
app/assets/: app.css
app/src/: main.rs
assets/: main.css
connection/: Cargo.toml
connection-ssh/: Cargo.toml
connection-ssh/src/: lib.rs
connection/src/: lib.rs
database/: Cargo.toml
database/src/: lib.rs
driver-clickhouse/: Cargo.toml
driver-clickhouse/src/: lib.rs
driver-mysql/: Cargo.toml
driver-mysql/src/: lib.rs
driver-postgres/: Cargo.toml
driver-postgres/src/: lib.rs
driver-sqlite/: Cargo.toml
driver-sqlite/src/: lib.rs
drivers/: Cargo.toml
drivers/src/: lib.rs
drivers/src/clickhouse/: mod.rs
drivers/src/postgres/: mod.rs
drivers/src/sqlite/: mod.rs
explorer/: Cargo.toml
explorer/src/: lib.rs  mysql.rs  postgres.rs  sqlite.rs
github/workflows/: release.yml
models/: Cargo.toml
models/src/: acp.rs  agent.rs  app.rs  chat.rs  connection.rs  execution_plan.rs  explorer.rs  lib.rs  query.rs  saved_query.rs  semantic_cache.rs  settings.rs
packaging/arch/: PKGBUILD.in  shovel.desktop  showel.desktop
packaging/aur/shovel/: PKGBUILD.in
packaging/aur/shovel-bin/: PKGBUILD.in
packaging/aur/shovel-git/: .SRCINFO  PKGBUILD
packaging/flatpak/: dev.shovel.app.desktop  dev.shovel.app.metainfo.xml  dev.shovel.app.yml  dev.showel.app.desktop  dev.showel.app.metainfo.xml  dev.showel.app.yml
query/: Cargo.toml
query-core/: Cargo.toml
query-core/src/: build.rs  ddl.rs  editable.rs  execution_plan.rs  lib.rs  mutations.rs  preview.rs  rows.rs
query-format/: Cargo.toml
query-format/src/: lib.rs
query-io/: Cargo.toml
query-io/src/: lib.rs
query/src/: format.rs  lib.rs
query/src/core/: build.rs  ddl.rs  editable.rs  execution_plan.rs  mod.rs  mutations.rs  preview.rs  rows.rs
scripts/: build-apt-repo.sh  build-deb-package.sh  build-flatpak-bundle.sh  build-flatpak-repo.sh  build-pacman-repo.sh  build-windows-installer.ps1  publish-aur-package.sh  render-arch-package.sh  render-aur-binary-package.sh  render-aur-release-package.sh  resolve-pkgrel.sh  resolve-release-tag.sh  update-aur-srcinfo.sh
services/: Cargo.toml
services/src/: acp.rs  acp_context.rs  acp_registry.rs  app.rs  connection.rs  data_io.rs  explorer.rs  formatter.rs  history.rs  lib.rs  query.rs  saved_queries.rs  storage.rs
services/src/query/: build.rs  rows.rs
src/: app.rs  db.rs  main.rs  ui.rs
src/app/: mod.rs  state.rs
storage/: Cargo.toml
storage/src/: chat.rs  fs_store.rs  history.rs  lib.rs  query_history.rs  saved_queries.rs  secrets.rs  semantic_cache.rs  settings.rs
styles/: app.scss
styles/base/: _reset.scss  _states.scss  _tokens.scss  _typography.scss
styles/components/: _agent-panel.scss  _buttons.scss  _connect-screen.scss  _editor.scss  _error-boundary.scss  _execution-plan.scss  _history-list.scss  _inputs.scss  _result-grid.scss  _saved-queries.scss  _session-list.scss  _settings-modal.scss  _statusbar.scss  _tabbar.scss  _table-modal.scss  _toast.scss  _toolbar.scss  _tree-nav.scss  _tree.scss
styles/layout/: _app-layout.scss  _workspace-grid.scss  _workspace-panels.scss  _workspace-resize.scss  _workspace.scss
styles/themes/: _theme-dark.scss  _theme-light.scss
styles/utilities/: _scrollbar.scss
ui/: Cargo.toml  build.rs
ui/assets/: app.css
ui/src/: app.rs  app_state.rs  codestral.rs  completion.rs  lib.rs
ui/src/components/: cache_indicator.rs  inline_completion.rs  mod.rs
ui/src/db_connect/: clickhouse.rs  kind_selector.rs  mod.rs  postgres.rs  sqlite.rs
ui/src/layout/: mod.rs  settings_modal.rs  status_bar.rs  toast.rs  toolbar.rs
ui/src/screens/: mod.rs
ui/src/screens/connect/: edit_connection_modal.rs  kind_selector.rs  mod.rs  recent_connections.rs
ui/src/screens/connect/forms/: clickhouse.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs  ssh_tunnel.rs
ui/src/screens/workspace/: actions.rs  chat.rs  context.rs  helpers.rs  mod.rs
ui/src/screens/workspace/components/: agent_panel.rs  blob_viewer.rs  chart.rs  data_diff.rs  er_diagram.rs  execution_plan.rs  explorer.rs  history.rs  icon_button.rs  mod.rs  result_table.rs  result_table_helpers.rs  saved_queries.rs  session_rail.rs  sql_editor.rs  sql_format_settings.rs  table_editor.rs  tabs.rs
ui/src/screens/workspace/components/agent_panel/: clickhouse.rs  composer.rs  messages.rs  mod.rs  prompt.rs  registry_card.rs  requests.rs  setup.rs  state.rs
ui/src/screens/workspace/components/explorer/: create_table_modal.rs  duplicate_table_modal.rs  mod.rs  tree_views.rs
ui/src/screens/workspace/components/sql_editor/: acp_inline_completion.rs  autocomplete.rs  completion.rs  completion_alias.rs  completion_candidates.rs  completion_context.rs  completion_keywords.rs  completion_tokenizer.rs  completion_types.rs  highlight.rs  selection.rs
ui/src/screens/workspace/hooks/: mod.rs  use_acp.rs  use_chat.rs  use_explorer.rs  use_query_tabs.rs
(+4 files in other folders)
