[package]
name = "showel"
version = "0.2.1"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_extras = "0.27"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
