[workspace]
members = [
    "acp",
    "acp-registry",
    "app",
    "connection",
    "connection-ssh",
    "database",
    "driver-clickhouse",
    "driver-mysql",
    "driver-postgres",
    "driver-sqlite",
    "explorer",
    "models",
    "query",
    "services",
    "storage",
    "ui",
]
resolver = "2"

[workspace.dependencies]
ui = { path = "ui" }
models = { path = "models" }
database = { path = "database" }
services = { path = "services" }
acp = { path = "acp" }
acp-registry = { path = "acp-registry" }
connection = { path = "connection" }
connection-ssh = { path = "connection-ssh" }
driver-clickhouse = { path = "driver-clickhouse" }
driver-mysql = { path = "driver-mysql" }
driver-postgres = { path = "driver-postgres" }
driver-sqlite = { path = "driver-sqlite" }
explorer = { path = "explorer" }
query = { path = "query" }
storage = { path = "storage" }

dioxus = "0.7.3"
libsqlite3-sys = { version = "0.30.1", features = ["bundled", "bundled-windows"] }
tokio = { version = "1.44.1", features = ["fs", "io-std", "process", "rt", "rt-multi-thread", "sync", "time", "macros"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "stream"] }
rfd = "0.17.2"
futures-util = "0.3.31"
