[package]
name = "acp-context"
version = "0.1.0"
description = "ACP database context builder: schema explorer, introspection, and semantic cache"
edition = "2024"

[features]
default = []
embedding = ["acp-core/embedding"]

[dependencies]
acp-core = { path = "../acp-core" }
driver-clickhouse.workspace = true
explorer.workspace = true
models.workspace = true
query.workspace = true
serde.workspace = true
sqlx = { workspace = true, features = ["postgres", "mysql", "sqlite"] }
storage.workspace = true
tokio.workspace = true
tracing = "0.1"
