[package]
name = "acp-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
flate2 = "1.1.2"
models.workspace = true
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
tar = "0.4.44"
tokio = { version = "1.44.1", features = ["rt"] }
walkdir = "2.5.0"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
