[package]
name = "acp"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = "0.10.2"
acp-registry.workspace = true
async-trait = "0.1.89"
explorer.workspace = true
futures-util = "0.3.31"
models.workspace = true
query.workspace = true
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shlex = "1.3.0"
tokio = { version = "1.44.1", features = ["fs", "io-std", "process", "rt", "sync"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
