[package]
name = "acp"
version = "0.1.0"
edition = "2024"

[features]
default = []
embedding = ["ort", "ndarray", "tokenizers"]

[dependencies]
agent-client-protocol = "0.10.3"
acp-registry.workspace = true
async-trait = "0.1.89"
connection.workspace = true
database.workspace = true
driver-clickhouse.workspace = true
explorer.workspace = true
futures-util.workspace = true
models.workspace = true
ndarray = { version = "0.16", optional = true }
query.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex = "1.3.0"
sqlx = { workspace = true, features = ["postgres", "mysql", "sqlite"] }
storage.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["compat"] }
tokenizers = { version = "0.21", optional = true }
ort = { version = "2.0.0-rc.9", features = ["half", "ndarray"], optional = true }
tracing = "0.1"
