[package]
name = "app"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
acp.workspace = true
dioxus.workspace = true
image = { version = "0.25.8", default-features = false, features = ["png"] }
ui.workspace = true
rfd = "0.17.2"

[build-dependencies]
grass = "0.13.4"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
bundle = []
