[package]
name = "app"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
acp.workspace = true
dioxus.workspace = true
ui.workspace = true
rfd.workspace = true

[build-dependencies]
grass = "0.13.4"
image = { version = "0.25.10", default-features = false, features = ["png"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
bundle = []
