[package]
name = "connection"
version = "0.1.0"
description = "Database connection orchestration and SSH tunnel lifecycle management"
edition = "2024"

[dependencies]
connection-ssh.workspace = true
database.workspace = true
driver-clickhouse.workspace = true
driver-mysql.workspace = true
driver-postgres.workspace = true
driver-sqlite.workspace = true
models.workspace = true
reqwest.workspace = true
