[package]
name = "connection"
version = "0.1.0"
description = "Database connection orchestration and SSH tunnel lifecycle management"
edition = "2024"

[dependencies]
connection-ssh.workspace = true
database.workspace = true
driver-clickhouse = { workspace = true, optional = true }
driver-mysql = { workspace = true, optional = true }
driver-postgres = { workspace = true, optional = true }
driver-sqlite = { workspace = true, optional = true }
models.workspace = true
reqwest = { workspace = true, optional = true }

[features]
default = ["sqlite", "postgres", "mysql", "clickhouse"]
sqlite = ["driver-sqlite"]
postgres = ["driver-postgres"]
mysql = ["driver-mysql"]
clickhouse = ["driver-clickhouse", "reqwest"]
