[package]
name = "driver-clickhouse"
version = "0.1.0"
edition = "2024"

[dependencies]
database.workspace = true
models.workspace = true
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
