[package]
name = "explorer"
version = "0.1.0"
description = "Schema and database tree loading, table metadata exploration"
edition = "2024"

[dependencies]
database.workspace = true
driver-clickhouse.workspace = true
models.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["sqlite", "postgres", "mysql"] }
