[package]
name = "query-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = "0.4.7"
driver-clickhouse.workspace = true
models.workspace = true
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["sqlite", "postgres", "runtime-tokio-rustls", "uuid", "time", "json", "bigdecimal"] }
time = "0.3.41"
uuid = "1.17.0"
