[package]
name = "query-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = "0.4.7"
driver-clickhouse.workspace = true
models.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["sqlite", "postgres", "mysql", "uuid", "time", "json", "bigdecimal"] }
time = "0.3.41"
uuid = "1.17.0"

[dev-dependencies]
tokio.workspace = true
