[package]
name = "query-io"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
driver-clickhouse.workspace = true
models.workspace = true
rust_xlsxwriter = "0.94.0"
serde_json.workspace = true
sqlx = { workspace = true, features = ["sqlite", "postgres", "mysql"] }
tokio.workspace = true
