[package]
name = "services"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-client-protocol = "0.10.2"
async-trait = "0.1.89"
database.workspace = true
drivers.workspace = true
futures = "0.3.31"
models.workspace = true
dirs = "6.0.0"
flate2 = "1.1.2"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
shlex = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["sqlite", "postgres", "runtime-tokio-rustls"] }
tar = "0.4.44"
tokio = { version = "1.44.1", features = ["fs", "process", "rt", "sync"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
walkdir = "2.5.0"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
