[package]
name = "services"
version = "0.1.0"
description = "Facade crate re-exporting major Shovel operations"
edition = "2024"

[dependencies]
acp.workspace = true
connection.workspace = true
explorer.workspace = true
futures-util.workspace = true
models.workspace = true
query.workspace = true
storage.workspace = true
