[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
libsqlite3-sys = "0.30.1"
models.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlite-vec = "0.1.6"
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.44.1", features = ["fs", "sync", "rt", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
