[package]
name = "storage"
version = "0.1.0"
description = "Local persistence layer for settings, sessions, connections, history, and chat"
edition = "2024"

[dependencies]
dirs = "6.0.0"
sha2 = "0.10"
libsqlite3-sys.workspace = true
models.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlite-vec = "0.1.6"
sqlx = { workspace = true, features = ["sqlite"] }
tokio.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
