[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
acp.workspace = true
connection.workspace = true
dioxus = "0.7.3"
explorer.workspace = true
futures-util = "0.3.31"
models.workspace = true
query.workspace = true
rfd = "0.17.2"
serde_json = "1.0.140"
storage.workspace = true
tokio = { version = "1.44.1", features = ["time"] }
tree-sitter-highlight = "0.25.10"
tree-sitter-sequel = "0.3.11"
