[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
acp.workspace = true
ammonia = "4.1.2"
arboard = "3.6.1"
connection.workspace = true
dioxus = { version = "0.7.3", features = ["desktop"] }
explorer.workspace = true
futures-util.workspace = true
models.workspace = true
pulldown-cmark = "0.13.3"
query.workspace = true
reqwest.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
storage.workspace = true
tokio.workspace = true
tree-sitter-highlight = "0.25.10"
tree-sitter-sequel = "0.3.11"
