[package]
name = "ui"
version = "0.1.0"
description = "Dioxus Desktop UI — screens, components, state management, and theming"
edition = "2024"

[dependencies]
ammonia = "4.1.2"
arboard = "3.6.1"
dioxus = { version = "0.7.3", features = ["desktop"] }
futures-util.workspace = true
models.workspace = true
pulldown-cmark = "0.13.3"
reqwest.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
services.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7" }
tree-sitter-highlight = "0.25.10"
tree-sitter-sequel = "0.3.11"
